fix: cart icon align

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -129,16 +129,16 @@ body {
   color: var(--neutral-white);
   font-weight: 700;
   font-size: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5em;
 }
 
 .cart_button:hover {
   transition: 0.5s;
   background-color: var(--neutral-dark-blue);
   cursor: pointer;
-}
-
-.cart_button img {
-  margin-right: 0.5em;
 }
 
 .attribution {
